Légère correction d'alignement

--- a/src/assets/sass/objects/_card.scss
+++ b/src/assets/sass/objects/_card.scss
@@ -221,7 +221,7 @@
 
                 .card__description{
                     height:(nth($size, 2)) + 2*16px;
-                    padding:15px 0px;
+                    padding:18px 0px;
                     .card__description__titre{
                         height:21px;
                         margin:0px;
